ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-nginx-ingress
  namespace: lookup
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: argo-lookup.stage.mattcarrier.net
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: lookup-service
                port:
                  number: 5000
